--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
         </div>
     </section>
     <section id="bio">
+        <div class="line"></div>
         <h2>Chapter 1 - The meteorite crash</h2>
         <div class="line"></div>
         <pre>|</pre>
         <p>“It was a sunny day in our village, a nice village. Everything was fine. No one had any problems. Nobody needed to travel out of it. Everything was available. That day, I was wandering about and I met Mr. Jangers. He was in his especially happy mood today. He was a person who wouldn’t end an argument without a fight in his bad moods and greet everyone for a ‘great’ morning in his good moods. He wished me ‘an extremely great morning’ and I couldn’t resist saying the same thing to him too. After all, his smile made everyone smile. I had breakfast which consisted of cornflakes. I was a fan of cornflakes. Perhaps, everyone in the entire world knew how much I loved cornflakes! Whenever I was meeting someone, I had a bowl of cornflakes in my hand as soon as I entered. Just then, WHISH. And a spoonful of cornflakes flew from my spoon. I got up to shut the window. It was probably a windy day. I closed the window and SMASH…CRUNCH. The window broke. Something else to work on in summer. I looked at the sky. Nothing was wrong. I was wrong. The entire sky turned to a bright yellow. And I couldn’t believe what I was seeing. Even you would not believe it if a gigantic meteorite came crashing down at you.</p>
         <br>
-        <img width="250" src="meteorite.png">
+        <div class="container">
+            <img height="300" src="meteorite.png">
+        </div>
         <pre>|</pre>
         <p>It fell into a forest and the entire forest was flaming. An aftershock, I think, came and everyone’s houses were probably huts, including mine. The chimney was split in two. The roof had thousands of holes in it. Half of the bricks had fallen down. It was a miracle that the house was standing. Then POOF. A cloud of ash covered the sky. Everything was black. It seemed as if everything was invisible. Everyone escaped just in time because sparks of fire had started raining on the village. We all now know that there was more to that impact than we thought,” said George Bran. John Tine, Steve Tine and Jim Steel were sitting with him in Hendor’s bungalow.</p>
         <pre>|</pre>
@@ -28,12 +31,15 @@
         <p class="end">***</p>
     </section>
     <section id="2">
+        <div class="line"></div>
         <h2>Chapter 2 - Njhcfagnfs</h2>
         <div class="line"></div>
         <pre>|</pre>
         <p>The next day, John, Jim, Steve and Hendor set out to the village. “George says that the village is quite near the river Georgington,” told Jim. Georgington was far away and it took a day to reach a village since it was over the plains of Georgville. There were no roads built over it. When they reached it, the village was neat clean and green, unlike George’s description! First, they knocked on the door of the first house in the row. A human with long, pointy elf-like ears opened the door.</p>
         <br>
-        <img width="250" src="man.png">
+        <div class="container">
+            <img height="300" src="man.png">
+        </div>
         <pre>|</pre>
         <p>He said something in a language no one could understand. “What?” asked John, a little confused. “Sorry, I didn’t know you speak English. I have to think that to the translator. Let me introduce myself. I am Njhcfagnfs. It is pronounced Nuh-jhuk-fagan-fus.” “Hi. I am Hendor Drim. We need to talk to your mayor once,” said Hendor. “I am the mayor,” he replied. “Oh! We did not know! We wanted to talk about the meteorite crash and why you are here,” said Steve. “We came through the meteorite. We don’t have any problem in cooling the inner part. We wanted the Thwaiy metal in the soil for protection against the rare Molar Flare. We can’t do that because your soil is Enamel to our diggers. We were just thinking about what to do. We found the traces of Thwaiy over here only,” he replied.</p>
         <pre>|</pre>
@@ -42,12 +48,15 @@
         <p class="end">***</p>
     </section>
     <section id="3">
+        <div class="line"></div>
         <h2>Chapter 3 - The termites</h2>
         <div class="line"></div>
         <pre>|</pre>
         <p>The four of them were soon ready for the job. “Start your post hole diggers!” shouted John in excitement. Everyone did exactly as told and started digging. DDDDDRRRRR was the noise that echoed everywhere. Sand, concrete and gravel was flying here and there. In no time, the hole was extremely deep. They had made a plan to escape through the bent and empty well near the spot they had started digging. “We need to go deeper,” shouted Hendor. Once more, the noise of the diggers filled the pit. DDDDDRRRRR! Suddenly, CRACK! Jim had made a tiny hole that looked different. CLICK… CLICK… CLICK… CLICK… CLICK. CLACK! Steve peeped through the hole. There was a huge tunnel. Suddenly, two pincers came out of the hole and went under it. The ground was shaking. GRRRRRR! Something rumbled. Steve spotted what looked like an enormous termite!</p>
         <br>
-        <img width="250" src="termite.png">
+        <div class="container">
+            <img height="300" src="termite.png">
+        </div>
         <pre>|</pre>
         <p>“What is this!” he shouted up the hole. “Is there something down there?” asked Njhcfagnfs. “Yes! There are enormous termites,” exclaimed Steve. “They must have come with us in the meteorite. They had destroyed half of our planet. They are extremely dangerous! Keep away from them,” shouted Njhcfagnfs down the hole. “They have blocked our way down. We can’t fulfil your wish. We will meet you at the extraction point,” said Jim.</p>
         <pre>|</pre>
@@ -57,12 +66,15 @@
         <p class="end">***</p>
     </section>
     <section id="4">
+        <div class="line"></div>
         <h2>Chapter 4 - Termite attack</h2>
         <div class="line"></div>
         <pre>|</pre>
         <p>CRUMBLE! Some rocks fell into a pit in front of everyone. They looked up and an enormous termite mound was standing in front of them! Hendor ran towards the starting point and shouted, “Give a rope! The way to the well is blocked by a termite mound.” A group of aliens threw a rope towards the hole. The rest of the four ran and with the help of the aliens, all of them were safely at the top the hole. Just then, SNIP SNIP SNIP SNIP. A termite climbed the wall and came to the top of the hole. The group ran to the well for safety. Once more, their plans failed as another termite came up the well. They escaped to the safety of Hendor’s bungalow through a specialized car by the aliens.</p>
         <br>
-        <img width="250" src="mound.png">
+        <div class="container">
+            <img height="300" src="mound.png">
+        </div>
         <pre>|</pre>
         <p>“I am sorry that I didn’t tell you this. The termites are a creation by us. In an experiment at the Celestial Lab of Experiment or the CLOE, we were studying about making objects larger but during the ultimate test of testing it on living organisms, everything went wrong. We gave the termites the Hollow Pellets (HP) and used the Large-Maker Guns (LMG) on them. They became larger but destroyed everything!” told Njhcfagnfs.</p>
         <pre>|</pre>
@@ -71,12 +83,15 @@
         <p class="end">***</p>
     </section>
     <section id="5">
+        <div class="line"></div>
         <h2>Chapter 5 - The trap</h2>
         <div class="line"></div>
         <pre>|</pre>
         <p>John came from the drawing room and placed a hand-drawn map on the table. It had a circle with ‘Well’ written on it on the left and a black circle with ‘Hole’ written above it, towards the right of the map. Village was written above both of them. A blue coloured strip was above that and Georgington was written on it. Beside that, Georgville was written. On the opposite side, launch pad was written inside a rectangle. “This is the map of where we have been and where we will go,” said John.</p>
         <br>
-        <img width="250" id="map" src="map.png">
+        <div class="container">
+            <img height="300" id="map" src="map.png">
+        </div>
         <pre>|</pre>
         <p>“My plan is to make the rocket and the station bigger with the instruments. The next part in the plan is to ward the termites towards it by placing dead plants and trees inside the rocket at the very top. All of the termites will go there and we will launch them,” continued John.</p>
         <pre>|</pre>
@@ -85,12 +100,15 @@
         <p class="end">***</p>
     </section>
     <section id="6">
+        <div class="line"></div>
         <h2>Chapter 6 - 5, 4, 3, 2, 1…</h2>
         <div class="line"></div>
         <pre>|</pre>
         <p>Once again… PHISSSSS… PHISSSSS… PHIS… PHISSSSSSSSSS! It was happening! The rocket was becoming larger and larger and larger and larger! Now it could fit all of them inside it! “It worked! Let’s fill the top with all kinds of dead plants and trees!” exclaimed John. “I’m here,” said Njhcfagnfs, brilliantly driving a huge truck with an entire truckload of exactly what they wanted. They filled the top of the rocket with it and now they had to wait… Then the ground started shaking. THUD! THUD! THUD! The volume was increasing and increasing until it was a deafening noise. THUD! THUD! CRASH! THUD! CLICK! CLICK! THUD! CLICK! CLACK! CRASH! CRUNCH! THUD! THUD! THUD!</p>
         <br>
-        <img height="250" src="launch.png">
+        <div class="container">
+            <img height="300" src="launch.png">
+        </div>
         <pre>|</pre>
         <p>The termites had come. They were marching towards the rocker. They had to enter the command capsule. They must enter the command capsule. And they did! Climbing up and down was no problem for them. They clung to the walls of the command capsule. Obviously, everyone down on the ground didn’t know that. All they could do was hope that they were at the right place. The termites, on the other hand, didn’t have any controls inside the command capsule. They were already disconnected.</p>
         <pre>|</pre>
